second try at fixing font sizes and line-spacing

--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -12,10 +12,10 @@
 }
 $base-font-family: "Crimson Text", "Times New Roman", serif !default;
 $code-font-family: "Iosevka Term Slab Light", "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
-$base-font-size:   18px !default;
+$base-font-size:   1rem !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.5 !default;
+$base-line-height: 1.3 !default;
 
 $spacing-unit:     30px !default;
 
